--- a/loja-admin/tsconfig.json
+++ b/loja-admin/tsconfig.json
@@ -14,7 +14,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "@typesCustom": ["/Users/libajunior/Professor/PRM-2022/@types/index.ts"]
+    },
+    "rootDirs": ["/Users/libajunior/Professor/PRM-2022/@types"],   
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
