--- a/loja-admin/package.json
+++ b/loja-admin/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.2.1",
     "react-router-dom": "^6.3.0",
     "sass": "^1.54.5"
   },
